Fix a few minor theming bugs
- Footer height was too small due to floats
- Bold active menu item didn't look good with new heading font
- Contact buttons needed styling on small screens

--- a/themes/atletico/sass/components/_footer.scss
+++ b/themes/atletico/sass/components/_footer.scss
@@ -10,6 +10,7 @@
   clear: both;
   padding-bottom: $navigation-padding / 2;
   padding-top: $navigation-padding / 2;
+  text-align: right;
 
   .footer__wrapper {
     @include span-columns(10);
@@ -19,6 +20,7 @@
 
   .footer__logo {
     display: inline-block;
+    float: left;
 
     img {
       line-height: 1em;
@@ -27,11 +29,10 @@
 
   .menu--footer {
     display: inline-block;
-    float: right;
 
     .menu {
       line-height: 1.5em;
-      margin: 0 0 1em;
+      margin: 0;
       padding: 0;
 
       @include media($small) {
