--- a/themes/atletico/stylesheets/styles.css
+++ b/themes/atletico/stylesheets/styles.css
@@ -803,30 +803,36 @@ header .header__main-menu .menu--main li a:focus, header .header__main-menu .men
 /* line 195, ../sass/components/_header.scss */
 header .header__main-menu .menu .is-active {
   color: #fff;
-  font-weight: bold;
 }
-/* line 201, ../sass/components/_header.scss */
+@media screen and (min-width: 40.625em) {
+  /* line 195, ../sass/components/_header.scss */
+  header .header__main-menu .menu .is-active {
+    border-bottom: solid 1px #fff;
+    padding-bottom: .25em;
+  }
+}
+/* line 205, ../sass/components/_header.scss */
 header .header__main-menu .menu--account {
   display: inline-block;
   float: left;
 }
 @media screen and (min-width: 28.125em) {
-  /* line 201, ../sass/components/_header.scss */
+  /* line 205, ../sass/components/_header.scss */
   header .header__main-menu .menu--account {
     display: none;
   }
 }
-/* line 209, ../sass/components/_header.scss */
+/* line 213, ../sass/components/_header.scss */
 header .header__main-menu .menu--account .menu {
   margin: 0;
 }
-/* line 213, ../sass/components/_header.scss */
+/* line 217, ../sass/components/_header.scss */
 header .header__main-menu .menu--account .menu-item {
   display: inline-block;
   margin-right: .5em;
   padding: .5em 0;
 }
-/* line 218, ../sass/components/_header.scss */
+/* line 222, ../sass/components/_header.scss */
 header .header__main-menu .menu--account .menu-item a {
   color: #fff;
   font-size: .8em;
@@ -965,8 +971,9 @@ header .header__main-menu .menu--account .menu-item a {
   clear: both;
   padding-bottom: 0.75em;
   padding-top: 0.75em;
+  text-align: right;
 }
-/* line 14, ../sass/components/_footer.scss */
+/* line 15, ../sass/components/_footer.scss */
 .region-footer .footer__wrapper {
   float: left;
   display: block;
@@ -979,34 +986,34 @@ header .header__main-menu .menu--account .menu-item a {
 .region-footer .footer__wrapper:last-child {
   margin-right: 0;
 }
-/* line 20, ../sass/components/_footer.scss */
+/* line 21, ../sass/components/_footer.scss */
 .region-footer .footer__logo {
   display: inline-block;
+  float: left;
 }
-/* line 23, ../sass/components/_footer.scss */
+/* line 25, ../sass/components/_footer.scss */
 .region-footer .footer__logo img {
   line-height: 1em;
 }
-/* line 28, ../sass/components/_footer.scss */
+/* line 30, ../sass/components/_footer.scss */
 .region-footer .menu--footer {
   display: inline-block;
-  float: right;
 }
-/* line 32, ../sass/components/_footer.scss */
+/* line 33, ../sass/components/_footer.scss */
 .region-footer .menu--footer .menu {
   line-height: 1.5em;
-  margin: 0 0 1em;
+  margin: 0;
   padding: 0;
 }
 @media screen and (min-width: 40.625em) {
-  /* line 32, ../sass/components/_footer.scss */
+  /* line 33, ../sass/components/_footer.scss */
   .region-footer .menu--footer .menu {
     float: left;
     margin-bottom: 0;
     margin-left: 2em;
   }
 }
-/* line 44, ../sass/components/_footer.scss */
+/* line 45, ../sass/components/_footer.scss */
 .region-footer .menu--footer .menu-item {
   line-height: 1.5em;
   list-style: none;
@@ -1014,7 +1021,7 @@ header .header__main-menu .menu--account .menu-item a {
   text-align: right;
 }
 @media screen and (min-width: 40.625em) {
-  /* line 44, ../sass/components/_footer.scss */
+  /* line 45, ../sass/components/_footer.scss */
   .region-footer .menu--footer .menu-item {
     display: inline;
     line-height: 4em;
@@ -1022,11 +1029,11 @@ header .header__main-menu .menu--account .menu-item a {
     text-align: left;
   }
 }
-/* line 57, ../sass/components/_footer.scss */
+/* line 58, ../sass/components/_footer.scss */
 .region-footer .menu--footer .menu-item a {
   color: rgba(255, 255, 255, 0.8);
 }
-/* line 60, ../sass/components/_footer.scss */
+/* line 61, ../sass/components/_footer.scss */
 .region-footer .menu--footer .menu-item a:hover, .region-footer .menu--footer .menu-item a:focus {
   color: #fff;
 }
@@ -1113,6 +1120,18 @@ header .header__main-menu .menu--account .menu-item a {
   .path-contact textarea {
     width: 66%;
   }
+}
+/* line 33, ../sass/components/_forms.scss */
+.path-contact .form-actions {
+  margin: 0;
+}
+/* line 36, ../sass/components/_forms.scss */
+.path-contact .form-actions input {
+  margin: 1em 0 .5em;
+}
+/* line 39, ../sass/components/_forms.scss */
+.path-contact .form-actions input:first-child {
+  margin-right: 1em;
 }
 
 /**
